# pyocd-rtos-trykernel

./: .gitignore  README.md  pyproject.toml
src/pyocd_rtos_trykernel/: __init__.py
